[gd_scene load_steps=6 format=3 uid="uid://qk4wg1krcsce"]

[ext_resource type="PackedScene" uid="uid://dp846te0n2pvb" path="res://Scenes/Character/Knight.tscn" id="1_1ny42"]
[ext_resource type="Script" uid="uid://cc3dneuol0es5" path="res://Scripts/Levels/main_level.gd" id="1_yutd6"]
[ext_resource type="PackedScene" uid="uid://ctvwc8ks84tv3" path="res://Scenes/Character/Princesse.tscn" id="2_yutd6"]
[ext_resource type="PackedScene" uid="uid://clk1qu8wgoqqc" path="res://Scenes/Interface/death_screen.tscn" id="4_45nav"]
[ext_resource type="AudioStream" uid="uid://bhgwr7a18eq0n" path="res://Assets/blindHeartLooping.wav" id="5_8thny"]

[node name="Main_level" type="Node2D"]
script = ExtResource("1_yutd6")
nmb_level = 2

[node name="Knight" parent="." node_paths=PackedStringArray("princesse") instance=ExtResource("1_1ny42")]
z_index = 2
scale = Vector2(0.25, 0.25)
princesse = NodePath("../Princesse")

[node name="Princesse" parent="." node_paths=PackedStringArray("knight") instance=ExtResource("2_yutd6")]
scale = Vector2(0.5, 0.5)
SPEED = 200.0
knight = NodePath("../Knight")

[node name="death" parent="." node_paths=PackedStringArray("princesse") instance=ExtResource("4_45nav")]
visible = false
princesse = NodePath("../Princesse")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8thny")
volume_db = 3.215

[connection signal="dead" from="Knight" to="." method="dead"]
[connection signal="dead" from="Princesse" to="." method="dead"]
[connection signal="go_menu" from="death" to="." method="back_to_menu"]
[connection signal="retry" from="death" to="." method="reload_level"]
